
  - Duplication of some files in the distributed packages
  https://sourceforge.net/p/omegat/bugs/1123/

  - OpenSSH new key format and ECDSA/ED25519 keys
  https://sourceforge.net/p/omegat/bugs/1107/

  - Fails to load TM using tags
  https://sourceforge.net/p/omegat/bugs/1090

  - Ctrl+Z incorrectly erases contents of segment Note
  https://sourceforge.net/p/omegat/bugs/903/

  - Lucene 5.2 does not work under WebStart
  https://sourceforge.net/p/omegat/bugs/813/

  - JNA encoding issue on non-UTF-8 platforms
  https://sourceforge.net/p/omegat/bugs/812/

  - The LaTeX filter should use \item as a delimiter
  https://sourceforge.net/p/omegat/bugs/743/

  - Incorrect display of RTL segments in the Fuzzy Matches pane
  https://sourceforge.net/p/omegat/bugs/558/

  - Print Exception with Invalid URL in "Import From MediaWiki..
  https://sourceforge.net/p/omegat/bugs/459/

  - First session message in log not localised
  https://sourceforge.net/p/omegat/bugs/272/

  Localization Updates:

  - Catalan localization updated to 6.1 (UI, readme, documentation)
  - Dutch localization updated to 6.1 (UI, readme, documentation)
  - French localization updated to 6.1 (UI, documentation)
  - Italian localization updated to 6.1 (UI, readme, documentation)
  - Japanese localization updated to 6.1 (UI, readme, documentation)

----------------------------------------------------------------------
 OmegaT 6.0.0 (2023-06-19)
----------------------------------------------------------------------
  1 Enhancement
  1 Bug fixes
  11 Localisation updates
----------------------------------------------------------------------
6.0.0 vs 5.8.0

  Implemented requests:

  - OmegaT 6.0 requires Java 11 to run

  Bug fixes:

  - Fixed "null" file names in search results when "Display: file names" checkbox was unchecked
  https://sourceforge.net/p/omegat/bugs/1154/

  Localization Updates:

  - Belarusian localization updated to 6.0 (UI, readme, Instant Start)