@@ -324,7 +324,10 @@
 			  linkend="project.folder.source"
 			  endterm="project.folder.source.title"/> folder.</para>
 
-			  <para>Opens the file in the associated application.</para>
+              <para>Opens the file in the associated application if the file exists.
+               If you press down ALT key during selecting the menu item, opens a folder enclosing the file, by
+               OS standard file manager such as finder or file explorer, instead of opening the file.
+              </para>
 			</listitem>
 		  </varlistentry>
 
@@ -335,7 +338,10 @@
 			  linkend="project.folder.target"
 			  endterm="project.folder.target.title"/> folder.</para>
 
-			  <para>Opens the file in the associated application if the file exists.</para>
+			  <para>Opens the file in the associated application if the file exists.
+                If you press down ALT key during selecting the menu item, opens a folder enclosing the file, by
+                OS standard file manager such as finder or file explorer, instead of opening the file.
+              </para>
 			</listitem>
 		  </varlistentry>
 
@@ -346,7 +352,10 @@
 			  linkend="project.folder.glossary"
 			  endterm="project.folder.glossary.title"/> folder.</para>
 
-			  <para>Opens the file in the associated application if the file exists.</para>
+			  <para>Opens the file in the associated application if the file exists.
+              If you press down ALT key during selecting the menu item, opens a folder enclosing the file, by
+              OS standard file manager such as finder or file explorer, instead of opening the file.
+              </para>
 			</listitem>
 		  </varlistentry>
 		</variablelist>
