@@ -325,6 +325,9 @@
   - Ctrl+Z incorrectly erases contents of segment Note
   https://sourceforge.net/p/omegat/bugs/903/
 
+  - Manually assigned shortcuts open parent folders instead of files
+  https://sourceforge.net/p/omegat/bugs/858/
+
   - Lucene 5.2 does not work under WebStart
   https://sourceforge.net/p/omegat/bugs/813/
 
